<resources>
    <string name="app_name">모이믄</string>
    <string name="app_name_kr">모이믄</string>
    <string name="login">로그인</string>
    <string name="register">회원가입</string>
    <string name="loading">로딩중입니다.</string>
    <string name="id">아이디</string>
    <string name="id_check">중복확인</string>
    <string name="pw">비밀번호</string>
    <string name="pw_confirm">비밀번호 확인</string>
    <string name="birthday_format">생년월일</string>
    <string name="email">이메일</string>
    <string name="email_confirm">이메일 인증</string>
    <string name="pw_msg">비밀번호가 일치 하지 않습니다.</string>
    <string name="birth_msg">생년월일 양식이 일치하지 않습니다.</string>
    <string name="id_msg_ok">사용 가능한 아이디입니다.</string>
    <string name="id_msg_not_ok">사용 불가능한 아이디입니다.</string>
    <string name="no_msg">값을 입력해주세요.</string>
    <string name="name">이 름</string>
    <string name="menu_1">내 모임</string>
    <string name="menu_2">내 캘린더</string>
    <string name="menu_3">내 정보</string>
    <string name="meeting_name">모임 이름 </string>
    <string name="metting_pw">모임 비밀번호</string>
    <string name="meeting_start_date">모임 시작일</string>
    <string name="meeting_end_date">모임 종료일</string>
    <string name="meeting_sm">소규모</string>
    <string name="meeting_bm">대규모</string>
    <string name="sm_bm_msg">소규모: 5인 이하, 대규모: 5인 초과</string>
    <string name="repeat_ok">반복  함</string>
    <string name="repeat_not_ok">반복 안함</string>
    <string name="late_money_func_on">지각비 기능 ON</string>
    <string name="late_money_func_off">지각비 기능 OFF</string>
    <string name="location_func_on">위치 추적 기능 ON</string>
    <string name="location_func_off">위치 추적 기능 OFF</string>
    <string name="auto_link">모임 링크 생성하기 (클릭)</string>
    <string name="link_msg">생성된 링크를 공유하여 구성원을 초대할 수 있습니다 :)</string>
    <string name="create_meeting">모임 만들기</string>
    <string name="profile_name">프로필 이름</string>
    <string name="penalty">벌점</string>
    <string name="profile_id">프로필 아이디</string>
    <string name="profile_level">Lv.</string>
    <string name="total_meeting_count">"총 모임횟수 : "</string>
    <string name="total_meeting_late_count">"총 지각횟수 : "</string>
    <string name="time_table_time">시 간</string>
    <string name="time_table_monday">월</string>
    <string name="time_table_tue">화</string>
    <string name="time_table_wed">수</string>
    <string name="time_table_thu">목</string>
    <string name="time_table_fri">금</string>
    <string name="time_table_sat">토</string>
    <string name="time_table_sun">일</string>
    <string name="time_table_9_10"> 9 - 10</string>
    <string name="time_table_10_11">10 - 11</string>
    <string name="time_table_11_12">11 - 12</string>
    <string name="time_table_12_13">12 - 13</string>
    <string name="time_table_13_14">13 - 14</string>
    <string name="time_table_14_15">14 - 15</string>
    <string name="time_table_15_16">15 - 16</string>
    <string name="time_table_16_17">16 - 17</string>
    <string name="time_table_17_18">17 - 18</string>
    <string name="time_table_18_19">18 - 19</string>
    <string name="time_table_19_20">19 - 20</string>
    <string name="time_table_20_21">20 - 21</string>
    <string name="time_table_21_22">21 - 22</string>
    <string name="time_table_22_23">22 - 23</string>
    <string name="time_table_23_24">23 - 24</string>
    <string name="add_schedule">스케줄 추가</string>
    <string name="day">요일</string>
    <string name="time">시간</string>
    <string name="repeat">반복</string>
    <string name="schedule_name">스케줄 이름</string>
    <string name="create_schedule">추가 하기</string>
    <string name="delete_all_info">모이믄 탈퇴하기</string>
    <string name="meeting_schedule">모두의 스케줄</string>
    <string name="meeting_schedule_time_title">추천 모임 시간</string>
    <string name="modify_schedule_time">모임 시간 수정하기</string>
    <string name="meeting_schedule_location_title" >추천 모임 장소</string>
    <string name="modify_schedule_location">모임 장소 수정하기</string>
    <string name="is_gps_on">이 모임의 gps 추적 기능은</string>
    <string name="on">ON</string>
    <string name="is_penalty_on">이 모임의 벌금 기능은</string>
    <string name="off">OFF</string>
    <string-array name="color_spinner">
        <item>새싹이 싹튼 색</item>
        <item>꿈꾸는 다락방 색</item>
        <item>아이 눈부셔 색</item>
    </string-array>
    <string-array name="calendar_days">
        <item>월</item>
        <item>화</item>
        <item>수</item>
        <item>목</item>
        <item>금</item>
        <item>토</item>
        <item>일</item>
    </string-array>
    <string-array name="calendar_time">
        <item> 9 - 10 </item>
        <item> 10 - 11 </item>
        <item> 11 - 12 </item>
        <item> 12 - 13 </item>
        <item> 13 - 14 </item>
        <item> 14 - 15 </item>
        <item> 15 - 16 </item>
        <item> 16 - 17 </item>
        <item> 17 - 18 </item>
        <item> 18 - 19 </item>
        <item> 19 - 20 </item>
        <item> 20 - 21 </item>
        <item> 21 - 22 </item>
        <item> 22 - 23 </item>
        <item> 23 - 24 </item>
    </string-array>
    <string-array name="on_off">
        <item> ON </item>
        <item> OFF </item>
    </string-array>
    <string-array name="spinner_region">
        <item></item>
        <item>서울특별시</item>
        <item>부산광역시</item>
        <item>대구광역시</item>
        <item>인천광역시</item>
        <item>광주광역시</item>
        <item>대전광역시</item>
        <item>울산광역시</item>
        <item>세종특별자치시</item>
        <item>경기도</item>
        <item>강원도</item>
        <item>충청북도</item>
        <item>충청남도</item>
        <item>전라북도</item>
        <item>전라남도</item>
        <item>경상북도</item>
        <item>경상남도</item>
        <item>제주특별자치도</item>
    </string-array>
    <string-array name="spinner_region_seoul">
        <item>강남구</item>
        <item>강동구</item>
        <item>강북구</item>
        <item>강서구</item>
        <item>관악구</item>
        <item>광진구</item>
        <item>구로구</item>
        <item>금천구</item>
        <item>노원구</item>
        <item>도봉구</item>
        <item>동대문구</item>
        <item>동작구</item>
        <item>마포구</item>
        <item>서대문구</item>
        <item>서초구</item>
        <item>성동구</item>
        <item>성북구</item>
        <item>송파구</item>
        <item>양천구</item>
        <item>영등포구</item>
        <item>용산구</item>
        <item>은평구</item>
        <item>종로구</item>
        <item>중구</item>
        <item>중랑구</item>
    </string-array>
    <string-array name="spinner_region_seoul_gangnam">
        <item>개포동</item>
        <item>논현동</item>
        <item>대치동</item>
        <item>도곡동</item>
        <item>삼성동</item>
        <item>세곡동</item>
        <item>수서동</item>
        <item>신사동</item>
        <item>압구정동</item>
        <item>역삼동</item>
        <item>율현동</item>
        <item>일원동</item>
        <item>자곡동</item>
        <item>청담동</item>
    </string-array>
    <string-array name="spinner_region_seoul_gangdong">
        <item>강일동</item>
        <item>고덕동</item>
        <item>길동</item>
        <item>둔촌동</item>
        <item>명일동</item>
        <item>상일동</item>
        <item>성내동</item>
        <item>암사동</item>
        <item>천호동</item>
    </string-array>
    <string-array name="spinner_region_seoul_gangbuk">
        <item>미아동</item>
        <item>번동</item>
        <item>수유동</item>
        <item>우이동</item>
    </string-array>
    <string-array name="spinner_region_seoul_gangseo">
        <item>가양동</item>
        <item>개화동</item>
        <item>공항동</item>
        <item>과해동</item>
        <item>내발산동</item>
        <item>등촌동</item>
        <item>마곡동</item>
        <item>방화동</item>
        <item>염창동</item>
        <item>오곡동</item>
        <item>오쇠동</item>
        <item>외발산동</item>
        <item>화곡동</item>
    </string-array>
    <string-array name="spinner_region_seoul_gwanak">
        <item>남현동</item>
        <item>봉천동</item>
        <item>신림동</item>
    </string-array>
    <string-array name="spinner_region_seoul_gwangjin">
        <item>광장동</item>
        <item>구의동</item>
        <item>군자동</item>
        <item>능동</item>
        <item>자양동</item>
        <item>중곡동</item>
        <item>화양동</item>
    </string-array>
    <string-array name="spinner_region_seoul_guro">
        <item>가리봉동</item>
        <item>개봉동</item>
        <item>고척동</item>
        <item>구로동</item>
        <item>궁동</item>
        <item>신도림동</item>
        <item>오류동</item>
        <item>온수동</item>
        <item>천왕동</item>
        <item>항동</item>
    </string-array>
    <string-array name="spinner_region_seoul_geumcheon">
        <item>가산동</item>
        <item>독산동</item>
        <item>시흥동</item>
    </string-array>
    <string-array name="spinner_region_seoul_nowon">
        <item>공릉동</item>
        <item>상계동</item>
        <item>월계동</item>
        <item>중계동</item>
        <item>하계동</item>
    </string-array>
    <string-array name="spinner_region_seoul_dobong">
        <item>도봉동</item>
        <item>방학동</item>
        <item>쌍문동</item>
        <item>창동</item>
    </string-array>
    <string-array name="spinner_region_seoul_dongdaemun">
        <item>답십리</item>
        <item>신설동</item>
        <item>용두동</item>
        <item>이문동</item>
        <item>장안동</item>
        <item>전농동</item>
        <item>제기동</item>
        <item>청량리동</item>
        <item>회기동</item>
        <item>휘경동</item>
    </string-array>
    <string-array name="spinner_region_seoul_dongjag">
        <item>노량진동</item>
        <item>대방동</item>
        <item>동작동</item>
        <item>본동</item>
        <item>사당</item>
        <item>상도1동</item>
        <item>상도동</item>
        <item>신대방동</item>
        <item>흑석동</item>
    </string-array>
    <string-array name="spinner_region_seoul_mapo">
        <item>공덕동</item>
        <item>누수동</item>
        <item>고노산동</item>
        <item>당인동</item>
        <item>대흥동</item>
        <item>도화동</item>
        <item>동교동</item>
        <item>마포동</item>
        <item>망원동</item>
        <item>상수동</item>
        <item>상암동</item>
        <item>서교동</item>
        <item>성산동</item>
        <item>신공덕동</item>
        <item>신수동</item>
        <item>신정동</item>
        <item>아현동</item>
        <item>연남동</item>
        <item>염리동</item>
        <item>용강동</item>
        <item>중동</item>
        <item>창전동</item>
        <item>토정동</item>
        <item>하중동</item>
        <item>합정동</item>
        <item>현석동</item>
    </string-array>
    <string-array name="spinner_region_seoul_seodaemun">
        <item>남가좌동</item>
        <item>냉천동</item>
        <item>대신동</item>
        <item>대현동</item>
        <item>미근동</item>
        <item>봉원동</item>
        <item>북가좌동</item>
        <item>북아현동</item>
        <item>신촌동</item>
        <item>연희동</item>
        <item>영천동</item>
        <item>옥천동</item>
        <item>창전동</item>
        <item>천연동</item>
        <item>충청로2가</item>
        <item>충청로3가</item>
        <item>합동</item>
        <item>현저동</item>
        <item>홍은동</item>
        <item>홍제동</item>
    </string-array>
    <string-array name="spinner_region_seoul_seocho">
        <item>내곡동</item>
        <item>반포동</item>
        <item>방배동</item>
        <item>서초동</item>
        <item>신원동</item>
        <item>양재동</item>
        <item>염곡동</item>
        <item>우면동</item>
        <item>원지동</item>
        <item>잠원동</item>
    </string-array>
    <string-array name="spinner_region_seoul_seongdong">
        <item>금호동1가</item>
        <item>금호동2가</item>
        <item>금호동3가</item>
        <item>금호동4가</item>
        <item>도선동</item>
        <item>마장동</item>
        <item>사근동</item>
        <item>상왕십리동</item>
        <item>성수동1가</item>
        <item>성수동2가</item>
        <item>송정동</item>
        <item>옥수동</item>
        <item>용답동</item>
        <item>응봉동</item>
        <item>하왕십리동</item>
        <item>행당동</item>
        <item>홍익동</item>
    </string-array>
</resources>