<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorConceptWhite"
    tools:context=".src.Register.RegisterActivity">

    <ImageView
        android:id="@+id/register_iv_back_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:src="@drawable/ic_back_arrow"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"/>

    <ImageView
        android:id="@+id/register_iv_flower"
        android:layout_width="100dp"
        android:layout_height="50dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="15dp"
        android:src="@drawable/flower_deco" />

    <ScrollView
        android:id="@+id/register_sv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/register_iv_back_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="150dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/register_et_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/darkgreen_bg_line"
                android:hint="@string/id"
                android:textColorHint="@color/colorConceptDarkGreen"
                android:textColor="@color/colorBlack"
                android:padding="15dp"
                android:textSize="20sp"
                android:fontFamily="@font/mediumfont"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="160dp"/>

            <TextView
                android:id="@+id/register_btn_id_check"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:background="@drawable/white_line_fill_darkgreen"
                android:textColor="@color/colorConceptWhite"
                android:text="@string/id_check"
                android:textSize="20sp"
                android:padding="15dp"
                android:gravity="center"
                android:fontFamily="@font/mediumfont"
                android:layout_marginRight="40dp"
                android:layout_marginLeft="210dp"/>

            <EditText
                android:id="@+id/register_et_pw"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/register_et_id"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/darkgreen_bg_line"
                android:hint="@string/pw"
                android:textColorHint="@color/colorConceptDarkGreen"
                android:textColor="@color/colorBlack"
                android:padding="15dp"
                android:fontFamily="@font/mediumfont"
                android:textSize="20sp"/>

            <EditText
                android:id="@+id/register_et_pw_confirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/register_et_pw"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/darkgreen_bg_line"
                android:hint="@string/pw_confirm"
                android:textColorHint="@color/colorConceptDarkGreen"
                android:textColor="@color/colorBlack"
                android:padding="15dp"
                android:fontFamily="@font/mediumfont"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/register_tv_pw_confirm_msg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/register_et_pw_confirm"
                android:text="비밀번호가 일치 하지 않습니다."
                android:textSize="14sp"
                android:textColor="@color/colorConceptDarkGreen"
                android:layout_marginLeft="45dp"
                android:layout_marginRight="40dp"
                android:fontFamily="@font/mediumfont"
                android:layout_marginTop="3dp"/>

            <EditText
                android:id="@+id/register_et_birthday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/register_et_pw_confirm"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/darkgreen_bg_line"
                android:hint="@string/birthday_format"
                android:textColorHint="@color/colorConceptDarkGreen"
                android:textColor="@color/colorBlack"
                android:padding="15dp"
                android:fontFamily="@font/mediumfont"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/register_tv_birthday_confirm_msg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/register_et_birthday"
                android:text="생년월일 양식이 일치하지 않습니다."
                android:textSize="14sp"
                android:textColor="@color/colorConceptDarkGreen"
                android:layout_marginLeft="45dp"
                android:layout_marginRight="40dp"
                android:fontFamily="@font/mediumfont"
                android:layout_marginTop="3dp"/>

            <EditText
                android:id="@+id/register_et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/register_et_birthday"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/darkgreen_bg_line"
                android:hint="@string/email"
                android:textColorHint="@color/colorConceptDarkGreen"
                android:textColor="@color/colorBlack"
                android:padding="15dp"
                android:fontFamily="@font/mediumfont"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/register_tv_email_confirm_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/register_et_email"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/white_line_fill_darkgreen"
                android:hint="@string/email_confirm"
                android:textColorHint="@color/colorConceptWhite"
                android:textColor="@color/colorBlack"
                android:padding="15dp"
                android:fontFamily="@font/mediumfont"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/register_tv_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/register_tv_email_confirm_btn"
                android:layout_marginTop="45dp"
                android:layout_marginRight="40dp"
                android:layout_marginLeft="40dp"
                android:text="@string/register"
                android:textSize="24sp"
                android:padding="20dp"
                android:textColor="@color/colorWhite"
                android:gravity="center"
                android:fontFamily="@font/mediumfont"
                android:background="@drawable/white_line_fill_darkgreen"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:background="@color/colorConceptWhite"
                app:layout_constraintTop_toBottomOf="@id/register_tv_register"/>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>